--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(${test_name} src/tests/constructors_test.cpp src/tests/size_test.cpp src/tests/comparison_test.cpp src/tests/logic_operations_test.cpp src/tests/to_int_test.cpp)
+add_executable(${test_name} src/tests/constructors_test.cpp src/tests/size_test.cpp src/tests/comparison_test.cpp
+        src/tests/logic_operations_test.cpp src/tests/to_int_test.cpp src/tests/arithmetic_operations_test.cpp)
 target_link_libraries(${test_name} gtest_main)
 target_link_libraries(${test_name} corelib)
